--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,4 +2,10 @@
 <resources>
 
     <style name="Theme.DiscountEx" parent="android:Theme.Material.Light.NoActionBar" />
+
+    <style name="Theme.SplashScreen.DiscountExSplash" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">#FF0080FF</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_foreground</item>
+        <item name="postSplashScreenTheme">@style/Theme.DiscountEx</item>
+    </style>
 </resources>
